--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,5 @@
-.container {
-  width: 100%;
-  height: 100vh;
+body {
+ 
   --color: #a748f5;
   background: linear-gradient(95deg, var(--color) 25%, transparent 25%) -50px 0,
         linear-gradient(-15deg, var(--color) 25%, transparent 25%) -50px 0,
@@ -9,4 +8,7 @@
         linear-gradient(-15deg, transparent 75%, var(--color) 75%) -50px 0;
   background-color: #b669fd;
   background-size: 40px 40px;
+}
+b{
+  color: #fff;
 }
